--- a/DemoMarketPlace.Mvc/DemoMarketPlace.Mvc.csproj
+++ b/DemoMarketPlace.Mvc/DemoMarketPlace.Mvc.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
