--- a/DemoMarketPlace.Mvc/appsettings.json
+++ b/DemoMarketPlace.Mvc/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DemoMarketApi": "https://localhost:7179/api/"
 }
