--- a/DemoMarketPlace.WebApi/appsettings.json
+++ b/DemoMarketPlace.WebApi/appsettings.json
@@ -12,6 +12,7 @@
   "MongoSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "local",
-    "CollectionName": "log_doc"
+    "CollectionName": "log_doc",
+    "CollectionNameAddress": "AddressCollection"
   }
 }
