--- a/DemoMarketPlace.WebApi/DemoMarketPlace.WebApi.csproj
+++ b/DemoMarketPlace.WebApi/DemoMarketPlace.WebApi.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+    <PackageReference Include="Quartz" Version="3.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
