--- a/DemoMarketPlace.WebApi/appsettings.json
+++ b/DemoMarketPlace.WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MongoDeneme;Trusted_Connection=True;"
+    "DefaultConnection": "Server=EMRE;Database=MongoDeneme;Trusted_Connection=True;"
   },
   "MongoSettings": {
     "ConnectionString": "mongodb://localhost:27017",
