--- a/DemoMarketPlace.WebApi/DemoMarketPlace.WebApi.csproj
+++ b/DemoMarketPlace.WebApi/DemoMarketPlace.WebApi.csproj
@@ -19,7 +19,12 @@
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
     <PackageReference Include="Quartz" Version="3.5.0" />
+    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Helper\" />
   </ItemGroup>
 
 </Project>
